# clipboard_transport

./: .gitattribues  .gitignore  CMakeLists.txt  Clipboard_Transport.desktop  README.md  run.sh  server.py
assets/in/: html.html  image.html  text.html
binaries/linux/: clipboard_transport
binaries/macos/: clipboard_transport
include/: ClipboardManager.h  FileManager.h  typedefs.h
src/: ClipboardManager.cpp  FileManager.cpp  main.cpp
